[gd_scene load_steps=29 format=3 uid="uid://dumkpm67io62h"]

[ext_resource type="PackedScene" uid="uid://dja4somqhrbfm" path="res://Objects/Battle/Enemies/EnemyTemplate.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://c3m04u0svdq8" path="res://Graphics/Enemies/Robosphere/RobosphereNewHit.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d3bd8y6ybyciy" path="res://Graphics/Enemies/Robosphere/RobosphereNew.png" id="3"]
[ext_resource type="Script" path="res://Objects/Battle/Enemies/Vexball.gd" id="4"]
[ext_resource type="Script" path="res://Objects/Battle/Enemies/EnemyHitbox.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://be7ap71ugyjs6" path="res://Graphics/Enemies/Robosphere/RobosphereNewRun.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cc1qmt2frm8ui" path="res://Graphics/Enemies/Robosphere/RobosphereNewAttack.png" id="7"]
[ext_resource type="AudioStream" uid="uid://bijcvr2gy6kd2" path="res://Sounds/Enemy/robosphere_rev.wav" id="8_6ml0c"]
[ext_resource type="AudioStream" uid="uid://1tn4n8erfwij" path="res://Sounds/Enemy/robosphere_rev_fast.wav" id="9_qogvp"]
[ext_resource type="AudioStream" uid="uid://b6wjpmwheradb" path="res://Sounds/Enemy/robosphere_stop.wav" id="10_wlpog"]

[sub_resource type="Shader" id="5"]
code = "shader_type canvas_item;

uniform float white_progress : hint_range(0,1) = 0;

vec3 interpolate_vec3(vec3 start, vec3 end, float delta){
    return start + (end - start) * delta;
}

void fragment(){
    vec4 origin = texture(TEXTURE, UV);
    COLOR.rgb = interpolate_vec3(origin.rgb, vec3(1,1,1), white_progress);
    COLOR.a = origin.a;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fnd30"]
resource_local_to_scene = true
shader = SubResource("5")
shader_parameter/white_progress = 0.0

[sub_resource type="SpriteFrames" id="8"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(12, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_2tgt4"]
radius = 45.0

[sub_resource type="Animation" id="Animation_hgbsl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="7"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, -0.261799, 0.0]
}

[sub_resource type="Animation" id="Animation_wrp82"]
resource_name = "return"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(150, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stop:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="1"]
resource_name = "rev_fast"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -6.28319, -12.5664, -18.8496, -25.1327, -31.4159]
}

[sub_resource type="Animation" id="Animation_m117h"]
resource_name = "rev_normal"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -3.14159, -6.28319]
}

[sub_resource type="Animation" id="3"]
resource_name = "rev_slow"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 0.0]
}

[sub_resource type="Animation" id="4"]
resource_name = "roll"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -6.28319, -12.5664, -18.8496, -25.1327]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-480, 0)]
}

[sub_resource type="Animation" id="Animation_8w5fq"]
resource_name = "run"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 16.7552]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(300, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["run"]
}

[sub_resource type="Animation" id="2"]
resource_name = "shake"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 3.0, -3.0, 8.0, -8.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["hit", "idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i6bgo"]
_data = {
"RESET": SubResource("Animation_hgbsl"),
"idle": SubResource("7"),
"return": SubResource("Animation_wrp82"),
"rev_fast": SubResource("1"),
"rev_normal": SubResource("Animation_m117h"),
"rev_slow": SubResource("3"),
"roll": SubResource("4"),
"run": SubResource("Animation_8w5fq"),
"shake": SubResource("2")
}

[sub_resource type="Animation" id="Animation_pcaal"]
resource_name = "glow"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_3e240"]
resource_name = "stop glowing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x53tg"]
_data = {
"glow": SubResource("Animation_pcaal"),
"stop glowing": SubResource("Animation_3e240")
}

[node name="Vexball2" groups=["vexball"] instance=ExtResource("1")]
script = ExtResource("4")
hp = 35
enemyname = "Icy RoboSphere"
enemydesc = "A strange ball that enjoys rolling. Spends most of its free time watching robotics competitions."

[node name="Sprite" parent="." index="0"]
material = SubResource("ShaderMaterial_fnd30")
sprite_frames = SubResource("8")

[node name="RealHitbox" type="Area2D" parent="Sprite" index="0" groups=["enemy_hitbox"]]
script = ExtResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/RealHitbox" index="0"]
shape = SubResource("6")

[node name="GridChecker" type="Area2D" parent="Sprite" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/GridChecker" index="0"]
shape = SubResource("CircleShape2D_2tgt4")

[node name="Arrows" parent="CanvasLayer" index="2"]
offset_left = -26.0
offset_top = -37.0
offset_right = -12.0
offset_bottom = -23.0

[node name="SmallArrow" parent="CanvasLayer/Arrows" index="1"]
offset_left = 0.0
offset_top = 0.0
offset_right = 9.0
offset_bottom = 9.0

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_i6bgo")
}

[node name="IdleTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="Rev" type="AudioStreamPlayer2D" parent="." index="7"]
stream = ExtResource("8_6ml0c")

[node name="FastRev" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource("9_qogvp")

[node name="Stop" type="AudioStreamPlayer2D" parent="." index="9"]
stream = ExtResource("10_wlpog")

[node name="GlowPlayer" parent="." index="10"]
libraries = {
"": SubResource("AnimationLibrary_x53tg")
}

[connection signal="area_entered" from="Sprite/GridChecker" to="." method="_on_grid_checker_area_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
